# Yak-Kernel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md
cmake/: kconfig.cmake
configs/: default_defconfig
kernel/: CMakeLists.txt  Kconfig  build.cmake  get_git_hash.cmake  sandr.sh  symbols.cmake
kernel/arch/: CMakeLists.txt
kernel/arch/generic-limine/: CMakeLists.txt  entry.c  fb.c
kernel/arch/hosted/: CMakeLists.txt
kernel/arch/hosted/linux/: CMakeLists.txt  default_ld_script.sh  early_log.cpp  entry.cpp  hooks.cpp  ipl.cpp  os_conf.h  sched.cpp
kernel/arch/hosted/linux/include/yak/: arch-cpudata.h  arch-intr.h  arch-mm.h  arch-page.h  arch-pagemap.h  arch-pcb.h  arch-stack.h  percpu.h
kernel/arch/limine-generic/: CMakeLists.txt  acpi.cpp  init.h  limine.cpp  memory.cpp  request.h
kernel/arch/riscv64/: CMakeLists.txt  early_log.cpp  init.cpp  ipl.cpp  kernel.ld  sched.S  sched.cpp  start.S
kernel/arch/riscv64/include/yak/: arch-cpudata.h  arch-intr.h  arch-ipl.h  arch-mm.h  arch-pagemap.h  arch-pcb.h  arch-stack.h  percpu.h
kernel/arch/x86_64/: CMakeLists.txt  Kconfig  PlatformExpert.cc  address_space.cpp  adress_space.h  apic.cpp  asm.h  control_regs.h  cpu_features.h  early_log.cpp  gdt.cpp  gdt.h  idt.S  idt.cpp  idt.h  init.c  init.cpp  ipl.c  ipl.cpp  isr.c  kernel.ld  kvmclock.c  lapic.h  linker.lds  msr.h  sched.S  sched.cpp  start.S  string.S  syscall.cpp  tss.h
kernel/arch/x86_64/include/yak/: arch-cpu.h  arch-cpudata.h  arch-intr.h  arch-ipl.h  arch-mm.h  arch-page.h  arch-pagemap.h  arch-pcb.h  percpu.h
kernel/core/: CMakeLists.txt  banner.c  cpudata.c  cpudata.cpp  dpc.cpp  entry.cpp  init.c  kinfo.c  kobject.cpp  launch.c  log.cpp  mutex.c  numa.cpp  panic.c  panic.cpp  printk.c  ps.cpp  sched.c  sched.cpp  softint.cpp  thread.cpp  wait.cpp
kernel/core/syscall/: file.c
kernel/fs/: CMakeLists.txt
kernel/include/: assert.h  cstring  initgraph.h  nanoprintf.h  string.h
kernel/include/yak/: arch.h  assert.h  assume.h  bitset.h  constants.h  cpudata.h  cpumask.h  cred.h  dpc.h  fixed_arena.h  hint.h  init.h  interrupt-guard.h  ipl-guard.h  ipl.h  kernel-file.h  kobject.h  log.h  math.h  mutex.h  numa.h  panic.h  ps.h  queue.h  rwlock.h  sched.h  sched_prio.h  size-macros.h  softint.h  spinlock.h  status.h  thread.h  timer.h  types.h  util.h  version.h.in  wait.h  waitblock.h
kernel/include/yak/vm/: address.h  alloc.h  flags.h  generic_pagemap.h  map.h  memblock.h  page.h  pmm.h  stack.h
kernel/include/yakpp/: Mutex.hh  Object.hh
kernel/include/yio/: EventSource.hh  Interrupt.h  InterruptController.hh  InterruptEventSource.hh  WorkLoop.hh
kernel/io/: CMakeLists.txt  EventSource.cc  InterruptController.cc  InterruptEventSource.cc  Kconfig  WorkLoop.cc
kernel/io/acpi/: CMakeLists.txt  glue.c  os-glue.cpp
kernel/io/drivers/ps2/: PS2Keyboard.cc
kernel/io/tty/: n_tty.c
kernel/lib/: CMakeLists.txt  abort.cpp  assert.cpp  cplusplus.cc  frigg.cpp  stack.cpp  string.c  ubsan.cpp  vmem.cpp
kernel/vm/: CMakeLists.txt  Kconfig  generic_pagemap.cpp  map.c  map.cpp  memblock.cpp  pmm.c  pmm.cpp  stack.cpp
scripts/: fixdeps.py
scripts/kconfig/: kconfig.py
toolchain/: toolchain_clang.cmake  toolchain_defaults.cmake
